# inference-time-scaling

./: .env  .gitignore  .pre-commit-config.yaml  makefile  pyproject.toml
code/: 1-Accuracy.ipynb  2-KL-ReasoningSteps-Baseline.ipynb  2-KL-ReasoningSteps-ITS.ipynb  2-Self_confidence_forward_pass.ipynb  3-Self_confidence_ITS.ipynb  4-EarlyStop.ipynb  config.py  grader.py  main.py  merge.py  merge_accuracy.py  merge_self_certainty.py  qwen_math_parser.py  results.py  scripts.sh  utils.py
code/methods/: __init__.py  forward_pass.py
old/: curvature.py  entropy.py  entropy_weigthed_similarity.py  expected_entropy.py  expected_kl_divergence.py  expected_similarity.py  mixtures.py  self_consistency.py
