[project]
name = "its"
version = "0.0.1"
description = "Uncertainty-informed inference time scaling methods for large reasoning models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "bokeh>=3.7.2",
    "datasets>=3.4.0",
    "dotenv>=0.9.9",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "latex2sympy2>=1.9.1",
    "word2number>=1.1",
    "vllm>=0.9.2",
    "thoughtminers @ /work/git/ThoughtMiners/",
    "pre-commit>=4.2.0",
    "ipython>=9.0.2",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
    "ipykernel>=6.29.5",
    "numpy>=2.2.4",
    "pytest>=8.3.5",
    "watermark",
    "ruff",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["D"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"